Update base and index templates

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
     <div id="chat-template">
         <div class="chat-container">
             <header class="chat-header">
-                <h1>ChatP</h1>
+                <h1>MugiChat-By Celestin</h1>
                 <div class="user-info">
                     <span id="welcome-user">Welcome, {{ username }}</span>
                     <a href="{{ url_for('logout') }}" id="logout-btn" class="logout-btn">Logout</a>
